# wikidata

./: .gitignore  README.md  async_requests.py  exceptions.py  meta_wikipage.py  plot.py  pyproject.toml  requirements.txt  scrap.py  wikidata.py  wikipage.py
