[tool.poetry]
name = "wikidata"
version = "0.1.0"
description = "Retrieve data about wikipages"
authors = ["zeddo123 <m.drissi@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
